<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:paddingBottom="20dp">
    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close"
        android:textSize="16sp"
        android:textColor="@color/darkTextColor"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:text="@string/choose_the_difficulty_level_for"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/easy_color"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/easy"
           />
        <Button
            android:id="@+id/medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/medium_color"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/medium"
            />
        <Button
            android:id="@+id/hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hard_color"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/hard"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>